Closed Bug 186683 Opened 23 years ago Closed 23 years ago

###!!! ASSERTION: |First()| on an empty string: 'Length()>0', file i:/build/mozilla/string/src/nsAString.cpp, line 136

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

(Keywords: assertion)

Attachments

(1 file)

cvs build from this weekend, no patches to typeahead/find (some patches to editor text areas) ###!!! ASSERTION: |First()| on an empty string: 'Length()>0', file i:/build/mozilla/string/src/nsAString.cpp, line 136 Break: at file i:/build/mozilla/string/src/nsAString.cpp, line 136 nsDebug::Assertion(const char * 0x10135a94, const char * 0x10135a88, const char * 0x10135a5c, int 136) line 280 + 13 bytes nsAString::First() line 136 + 40 bytes nsTypeAheadFind::FindItNow(nsIPresShell * 0x00000000, int 1, int 1, int 0) line 1194 + 15 bytes nsTypeAheadFind::HandleBackspace() line 738 + 32 bytes nsTypeAheadFind::KeyPress(nsTypeAheadFind * const 0x0107b1e4, nsIDOMEvent * 0x109455e8) line 612 + 11 bytes nsEventListenerManager::HandleEvent(nsEventListenerManager * const 0x03aa6d60, nsIPresContext * 0x1255c0d8, nsEvent * 0x0012f7d8, nsIDOMEvent * * 0x0012f474, nsIDOMEventTarget * 0x03ab0f58, unsigned int 2, nsEventStatus * 0x0012f610) line 1657 + 41 bytes nsWindowRoot::HandleChromeEvent(nsWindowRoot * const 0x03ab0f60, nsIPresContext * 0x1255c0d8, nsEvent * 0x0012f7d8, nsIDOMEvent * * 0x0012f474, unsigned int 2, nsEventStatus * 0x0012f610) line 216 GlobalWindowImpl::HandleDOMEvent(GlobalWindowImpl * const 0x03ab0e20, nsIPresContext * 0x1255c0d8, nsEvent * 0x0012f7d8, nsIDOMEvent * * 0x0012f474, unsigned int 2, nsEventStatus * 0x0012f610) line 829 nsXULDocument::HandleDOMEvent(nsXULDocument * const 0x08ea1878, nsIPresContext * 0x1255c0d8, nsEvent * 0x0012f7d8, nsIDOMEvent * * 0x0012f474, unsigned int 2, nsEventStatus * 0x0012f610) line 2571 nsXULElement::HandleDOMEvent(nsXULElement * const 0x08f78028, nsIPresContext * 0x1255c0d8, nsEvent * 0x0012f7d8, nsIDOMEvent * * 0x0012f474, unsigned int 2, nsEventStatus * 0x0012f610) line 3387 + 44 bytes nsXULElement::HandleDOMEvent(nsXULElement * const 0x08f2fdd8, nsIPresContext * 0x1255c0d8, nsEvent * 0x0012f7d8, nsIDOMEvent * * 0x0012f474, unsigned int 2, nsEventStatus * 0x0012f610) line 3381 + 58 bytes nsXULElement::HandleDOMEvent(nsXULElement * const 0x08f300f0, nsIPresContext * 0x1255c0d8, nsEvent * 0x0012f7d8, nsIDOMEvent * * 0x0012f474, unsigned int 2, nsEventStatus * 0x0012f610) line 3381 + 58 bytes nsXULElement::HandleDOMEvent(nsXULElement * const 0x08f302c0, nsIPresContext * 0x1255c0d8, nsEvent * 0x0012f7d8, nsIDOMEvent * * 0x0012f474, unsigned int 2, nsEventStatus * 0x0012f610) line 3381 + 58 bytes nsXULElement::HandleDOMEvent(nsXULElement * const 0x08f30338, nsIPresContext * 0x1255c0d8, nsEvent * 0x0012f7d8, nsIDOMEvent * * 0x0012f474, unsigned int 2, nsEventStatus * 0x0012f610) line 3381 + 58 bytes nsXULElement::HandleDOMEvent(nsXULElement * const 0x0de64d98, nsIPresContext * 0x1255c0d8, nsEvent * 0x0012f7d8, nsIDOMEvent * * 0x0012f474, unsigned int 2, nsEventStatus * 0x0012f610) line 3381 + 58 bytes nsXULElement::HandleDOMEvent(nsXULElement * const 0x0dedc8c0, nsIPresContext * 0x1255c0d8, nsEvent * 0x0012f7d8, nsIDOMEvent * * 0x0012f474, unsigned int 2, nsEventStatus * 0x0012f610) line 3381 + 58 bytes nsXULElement::HandleDOMEvent(nsXULElement * const 0x0dee1028, nsIPresContext * 0x1255c0d8, nsEvent * 0x0012f7d8, nsIDOMEvent * * 0x0012f474, unsigned int 2, nsEventStatus * 0x0012f610) line 3381 + 58 bytes nsXULElement::HandleChromeEvent(nsXULElement * const 0x0dee1034, nsIPresContext * 0x1255c0d8, nsEvent * 0x0012f7d8, nsIDOMEvent * * 0x0012f474, unsigned int 2, nsEventStatus * 0x0012f610) line 4579 + 39 bytes GlobalWindowImpl::HandleDOMEvent(GlobalWindowImpl * const 0x0dfd06d8, nsIPresContext * 0x1255c0d8, nsEvent * 0x0012f7d8, nsIDOMEvent * * 0x0012f474, unsigned int 2, nsEventStatus * 0x0012f610) line 829 mTypeAheadBuffer and mFindNextBuffer were both empty.
Attached patch fix early checkSplinter Review
Attachment #110103 - Flags: superreview?(kin)
Attachment #110103 - Flags: review?(aaronl)
Attachment #110103 - Flags: superreview?(kin) → superreview+
Attachment #110103 - Flags: review?(aaronl) → review+
checked in last year :)
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
rs vrfy
Status: RESOLVED → VERIFIED
Component: Keyboard: Navigation → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: