Bug 186683 ###!!! ASSERTION: |First()| on an empty string: 'Length()>0', file i:/build/mozilla/string/src/nsAString.cpp, line 136 r=aaronl sr=bz